splitview: Show splitview indicators correctly in portrait mode.

The indicators are now correctly placed on the top and bottom of the
screens when the device is in portrait mode.

Test: manual
Bug: 776012
Change-Id: If7a83c24918dd57d079f0553b075817f75895aba