ash/wm/splitview/split_view_overview_overlay.cc
@@ -4,6 +4,7 @@
 
 #include "ash/wm/splitview/split_view_overview_overlay.h"
 
+#include "ash/display/screen_orientation_controller_chromeos.h"
 #include "ash/public/cpp/shell_window_ids.h"
 #include "ash/resources/vector_icons/vector_icons.h"
 #include "ash/shell.h"
@@ -11,8 +12,10 @@
 #include "ash/wm/root_window_finder.h"
 #include "ash/wm/splitview/split_view_controller.h"
 #include "base/strings/utf_string_conversions.h"
+#include "third_party/WebKit/public/platform/modules/screen_orientation/WebScreenOrientationLockType.h"
 #include "ui/aura/window.h"
 #include "ui/base/l10n/l10n_util.h"
+#include "ui/display/display_observer.h"
 #include "ui/gfx/canvas.h"
 #include "ui/gfx/paint_vector_icon.h"
 #include "ui/views/border.h"
@@ -69,16 +72,15 @@ std::unique_ptr<views::Widget> CreateWidget() {
   return widget;
 }
 
-// Computes the transform which rotates the labels 90 degrees clockwise or
-// anti-clockwise based on |clockwise|. The point of rotation is the relative
-// center point of |bounds|.
+// Computes the transform which rotates the labels |angle| degrees. The point
+// of rotation is the relative center point of |bounds|.
 gfx::Transform ComputeRotateAroundCenterTransform(const gfx::Rect& bounds,
-                                                  bool clockwise) {
+                                                  double angle) {
   gfx::Transform transform;
   const gfx::Vector2dF center_point_vector =
       bounds.CenterPoint() - bounds.origin();
   transform.Translate(center_point_vector);
-  transform.Rotate(clockwise ? 90.0 : -90.0);
+  transform.Rotate(angle);
   transform.Translate(-center_point_vector);
   return transform;
 }
@@ -139,10 +141,11 @@ class SplitViewOverviewOverlay::RotatedImageLabelView : public views::View {
 
   void SetIconVisible(bool visible) { icon_->SetVisible(visible); }
 
-  // Called when the view's bounds are altered. Handles rotating the view.
-  void OnBoundsUpdated(const gfx::Rect& bounds, bool clockwise) {
+  // Called when the view's bounds are altered. Rotates the view by |angle|
+  // degrees.
+  void OnBoundsUpdated(const gfx::Rect& bounds, double angle) {
     SetBoundsRect(bounds);
-    SetTransform(ComputeRotateAroundCenterTransform(bounds, clockwise));
+    SetTransform(ComputeRotateAroundCenterTransform(bounds, angle));
   }
 
  private:
@@ -154,9 +157,12 @@ class SplitViewOverviewOverlay::RotatedImageLabelView : public views::View {
 
 // View which contains two highlights on each side indicator where a user should
 // drag a selected window in order to initiate splitview. Each highlight has a
-// label with instructions to further guide users.
+// label with instructions to further guide users. The highlights are on the
+// left and right of the display in landscape mode, and on the top and bottom of
+// the display in portrait mode.
 class SplitViewOverviewOverlay::SplitViewOverviewOverlayView
-    : public views::View {
+    : public views::View,
+      public display::DisplayObserver {
  public:
   SplitViewOverviewOverlayView() {
     left_hightlight_view_ = new views::View();
@@ -179,22 +185,6 @@ class SplitViewOverviewOverlay::SplitViewOverviewOverlayView
   }
 
   ~SplitViewOverviewOverlayView() override = default;
-
-  void Layout() override {
-    left_hightlight_view_->SetBounds(0, 0, kHighlightScreenWidth, height());
-    right_hightlight_view_->SetBounds(width() - kHighlightScreenWidth, 0,
-                                      kHighlightScreenWidth, height());
-
-    const int rotated_bounds_height =
-        kLabelHeightDp +
-        (left_rotated_view_->icon_visible() ? kWarningIconSizeDp : 0);
-    const gfx::Rect rotated_bounds(0, height() / 2 - rotated_bounds_height / 2,
-                                   kHighlightScreenWidth,
-                                   rotated_bounds_height);
-
-    left_rotated_view_->OnBoundsUpdated(rotated_bounds, false /* clockwise */);
-    right_rotated_view_->OnBoundsUpdated(rotated_bounds, true /* clockwise */);
-  }
 
   void OnIndicatorTypeChanged(IndicatorType indicator_type) {
     if (indicator_type_ == indicator_type)
@@ -224,6 +214,47 @@ class SplitViewOverviewOverlay::SplitViewOverviewOverlayView
     }
 
     NOTREACHED();
+  }
+
+  // views::View:
+  void Layout() override {
+    const blink::WebScreenOrientationLockType screen_orientation =
+        Shell::Get()->screen_orientation_controller()->GetCurrentOrientation();
+    const bool portrait =
+        screen_orientation == blink::kWebScreenOrientationLockPortraitPrimary ||
+        screen_orientation == blink::kWebScreenOrientationLockPortraitSecondary;
+
+    // Calculate the bounds of the two highlight regions.
+    const int highlight_width = portrait ? width() : kHighlightScreenWidth;
+    const int highlight_height = portrait ? kHighlightScreenWidth : height();
+    const gfx::Point right_bottom_origin(
+        portrait ? 0 : width() - kHighlightScreenWidth,
+        portrait ? height() - kHighlightScreenWidth : 0);
+    left_hightlight_view_->SetBounds(0, 0, highlight_width, highlight_height);
+    right_hightlight_view_->SetBounds(right_bottom_origin.x(),
+                                      right_bottom_origin.y(), highlight_width,
+                                      highlight_height);
+
+    // Calculate the bounds of the views which contain the guidance text and
+    // icon. Rotate the two views in landscape mode.
+    const int rotated_bounds_height =
+        kLabelHeightDp +
+        (left_rotated_view_->icon_visible() ? kWarningIconSizeDp : 0);
+    const int rotated_x =
+        portrait ? width() / 2 - kHighlightScreenWidth / 2 : 0;
+    const gfx::Rect rotated_bounds(
+        rotated_x, highlight_height / 2 - rotated_bounds_height / 2,
+        kHighlightScreenWidth, rotated_bounds_height);
+    left_rotated_view_->OnBoundsUpdated(rotated_bounds,
+                                        portrait ? 0.0 : -90.0 /* angle */);
+    right_rotated_view_->OnBoundsUpdated(rotated_bounds,
+                                         portrait ? 0.0 : 90.0 /* angle */);
+  }
+
+  // display::DisplayObserver:
+  void OnDisplayMetricsChanged(const display::Display& display,
+                               uint32_t metrics) override {
+    Layout();
   }
 
  private:
